End the America sir work

--- a/web/html/zuoye_circle.html
+++ b/web/html/zuoye_circle.html
@@ -10,7 +10,7 @@
       <div class="circular ui segment">
         <div class="circular ui inverted red segment">
           <div class="circular ui inverted blue vertical segment">
-              <i class="big star icon"></i>
+              <i class="big star icon" style="width:28px;height:28px;margin:0"></i>
           </div>
         </div>
       </div>
