end the apple-web

--- a/web/html/appleWeb.html
+++ b/web/html/appleWeb.html
@@ -2,20 +2,92 @@
 <html>
     <head>
         <title>苹果官网</title>
+        <meta charset="utf-8">
         <link rel="stylesheet" href="../css/semantic.css">
+        <style type="text/css">
+            a{
+                color: black;
+            }
+        </style>
     </head>
     <body>
-        <div class="ui inverted basic grid">
-            <div class="nine column row">
-                <div class="column">1</div>
-                <div class="column">Mac</div>
-                <div class="column">iPad</div>
-                <div class="column">iPhone</div>
-                <div class="column">Watch</div>
-                <div class="column">Music</div>
-                <div class="column">技术支持</div>
-                <div class="column"><i class="search icon"></i></div>
-                <div class="column">9</div>
+        <div class="ui inverted basic mini borderless nine item menu" style="height: 40px;margin: 0;border-radius: 0">
+            <a href="#" class="item">
+                <img src="../images/appleicon.png" alt="" class="ui image">
+            </a>
+            <a href="#" class="item">Mac</a>
+            <a href="#" class="item">iPad</a>
+            <a href="#" class="item">iPhone</a>
+            <a href="#" class="item">Watch</a>
+            <a href="#" class="item">Music</a>
+            <a href="#" class="item">技术支持</a>
+            <a href="#" class="item">
+                <img src="../images/searchicon.png" alt="" class="ui image">
+            </a>
+            <a href="#" class="item">
+                <img src="../images/buyicon.png" alt="" class="ui image">
+            </a>
+        </div>
+
+
+        <div class="ui image">
+            <img src="../images/banner.png" alt="banner">
+        </div>
+
+        <div class="ui four column grid">
+            <a href="#" class="column"><img src="../images/img1.png" alt=""></a>
+            <a href="#" class="column"><img src="../images/img2.png" alt=""></a>
+            <a href="#" class="column"><img src="../images/img3.png" alt=""></a>
+            <a href="#" class="column"><img src="../images/img4.png" alt=""></a>
+        </div>
+
+        <div class="ui very very padded segment" style="margin: 0;border-width: 0">
+            <p style="padding-left: 10px">双镜头摄像头仅于iPhone 7 Plus提供,亮黑色外观仅于128GB及以上存储容量的机型提供</p>
+            <div class="ui segment" style="font-size: 13px;border-left-width: 0;border-radius: 0;box-shadow: none;border-width:1px 0 0 0 ">
+                <div class="ui five column grid">
+                    <div class="five column row">
+                        <a href="#" class="column"><p class="column">Apple Store商店</p></a>
+                        <a href="#" class="column"><p>Apple Store商店</p></a>
+                        <a href="#" class="column"><p>Apple Store商店</p></a>
+                        <a href="#" class="column"><p>Apple Store商店</p></a>
+                        <a href="#" class="column"><p>Apple Store商店</p></a>
+                    </div>
+                    <div class="five column row">
+                        <a href="#" class="column"><p>查找零售店</p></a>
+                        <a href="#" class="column"><p>查找零售店</p></a>
+                        <a href="#" class="column"><p>查找零售店</p></a>
+                        <a href="#" class="column"><p>查找零售店</p></a>
+                        <a href="#" class="column"><p>查找零售店</p></a>
+                    </div>
+                    <div class="five column row">
+                        <a href="#" class="column"><p>iPad</p></a>
+                        <a href="#" class="column"><p>iPad</p></a>
+                        <a href="#" class="column"></a>
+                        <a href="#" class="column"></a>
+                        <a href="#" class="column"><p>iPad</p></a>
+                    </div>
+                    <div class="five column row">
+                        <a href="#" class="column"><p>iPhone</p></a>
+                        <a href="#" class="column"><p>iPhone</p></a>
+                        <a href="#" class="column"><p>商务应用</p></a>
+                        <a href="#" class="column"><p>商务应用</p></a>
+                        <a href="#" class="column"><p>iPhone</p></a>
+                    </div>
+                    <div class="five column row">
+                        <a href="#" class="column"><p>Watch</p></a>
+                        <a href="#" class="column"><p>Watch</p></a>
+                        <a href="#" class="column"><p>Apple与商务</p></a>
+                        <a href="#" class="column"><p>Apple与商务</p></a>
+                        <a href="#" class="column"><p>Watch</p></a>
+                    </div>
+                    <div class="five column row">
+                        <a href="#" class="column"><p>iPod</p></a>
+                        <a href="#" class="column"><p>iPod</p></a>
+                        <a href="#" class="column"><p>商务选购</p></a>
+                        <a href="#" class="column"><p>商务选购</p></a>
+                        <a href="#" class="column"><p>iPod</p></a>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
