--- a/web/html/appleWeb.html
+++ b/web/html/appleWeb.html
@@ -30,15 +30,17 @@
         </div>
 
 
-        <div class="ui image">
+        <div class="ui banner image">
             <img src="../images/banner.png" alt="banner">
         </div>
 
-        <div class="ui four column grid">
-            <a href="#" class="column"><img src="../images/img1.png" alt=""></a>
-            <a href="#" class="column"><img src="../images/img2.png" alt=""></a>
-            <a href="#" class="column"><img src="../images/img3.png" alt=""></a>
-            <a href="#" class="column"><img src="../images/img4.png" alt=""></a>
+        <div class="ui vertical basic segment">
+            <div class="ui fitted text menu">
+                <div class="item"><img src="../images/img1.png" alt="" class="ui image"></div>
+                <div class="item"><img src="../images/img2.png" alt="" class="ui image"></div>
+                <div class="item"><img src="../images/img3.png" alt="" class="ui image"></div>
+                <div class="item"><img src="../images/img4.png" alt="" class="ui image"></div>
+            </div>
         </div>
 
         <div class="ui very very padded segment" style="margin: 0;border-width: 0">
