--- a/web/html/10mins.html
+++ b/web/html/10mins.html
@@ -2,9 +2,55 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" href="../css/semantic.css">
         <link rel="stylesheet" href="../css/10mins.css">
     </head>
     <body>
+        <div class="top-bg">
+            <div class="ui basic inverted red  segment">
+                <div class="ui mini text menu">
+                    <div class="item">
+                        <div class="ui image">
+                            <img src="../images/tenlogo.png" alt="log">
+                        </div>
+                    </div>
 
+                    <div class="right menu">
+                        <div class="item">
+                            <img src="../images/hou30.jpg" alt="face" class="face">
+                            <span>&nbsp; &nbsp;admin</span>
+                        </div>
+                        <div class="item">
+                            <button class="ui inverted clear button">Logout</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    <div class="ui basic segment content">
+        <h1 class="ui header">Go to the profile of Washington Post</h1>
+        <div class="descr">
+            <i class="grey unhide icon"></i>
+            <span class="desc-span">10k</span>
+            <i class="grey checkmark icon"></i>
+            <span class="desc-span">5673 people got it</span>
+        </div>
+        <div class="content-text">
+            <p> Books possess an essence of immortality. They are by far the most lasting products of human effort. Temples and statues decay, but books survive. Time is of no account with great thoughts, which are as fresh today as when they first passed through their author’s minds, ages ago. What was then said and thought still speaks to us as vividly as ever from the printed page. The only effect of time have been to sift out the bad products; for nothing in literature can long survive e but what is really good.They are by far the most lasting products of human effort. Temples and statues decay, but books survive. Time is of no account with great thoughts, which are as fresh today as when they first passed through their author’s minds, ages ago. What was then said and thought still speaks to us as vividly as ever from the printed page. The only effect of time have been to sift out the bad products; for nothing in literature can long survive e but what is really good.They are by far the most lasting products of human effort. Temples and statues decay, but books survive. Time is of no account with great thoughts, which are as fresh today as when they first passed through their author’s minds, ages ago. What was then said and thought still speaks to us as vividly as ever from the printed page. The only effect of time have been to sift out the bad products; for nothing in literature can long survive e but what is really good.They are by far the most lasting products of human effort. Temples and statues decay, but books survive. Time is of no account with great thoughts, which are as fresh today as when they first passed through their author’s minds, ages ago. What was then said and thought still speaks to us as vividly as ever from the printed page. The only effect of time have been to sift out the bad products; for nothing in literature can long survive e but what is really good.</p>
+        </div>
+        <div class="ui text menu">
+            <div class="item">
+                <button class="ui button"><i class="checkmark icon"></i>Get it!</button>
+            </div>
+            <div class="item">
+                <button class="ui red button"><i class="bomb icon"></i>Hmmm...</button>
+            </div>
+            <div class="right item">
+                <button class="ui black button"><i class="pin icon"></i>Saved</button>
+            </div>
+
+        </div>
+    </div>
     </body>
 </html>
