end the first homework most

--- a/web/html/bloger.html
+++ b/web/html/bloger.html
@@ -3,5 +3,25 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="../css/semantic.css">
+        <link rel="stylesheet" href="../css/bloger.css">
     </head>
+    <body>
+
+        <div class="ui basic segment head">
+            <div class="ui banner">
+                <img src="../images/star_banner.jpg" alt="" class="banner-image">
+                <div class="ui basic center aligned segment">
+                    <h1 class="ui header">Bloger</h1>
+                    <p class="header-detail">EVERYONE HAS A STORY TO TELL</p>
+                </div>
+            </div>
+        </div>
+        <div class="ui basic segment">
+            <div class="ui secondary mini fluid three item menu">
+                <div class="item">Categories</div>
+                <div class="item">Popular</div>
+                <div class="item">About</div>
+            </div>
+        </div>
+    </body>
 </html>
