first homework some modify

--- a/第一阶段大作业/html/index.html
+++ b/第一阶段大作业/html/index.html
@@ -21,7 +21,7 @@
                         <span class="username">admin</span>
                     </div>
                     <div class="item" style="padding-right: 18px">
-                        <button class="ui inverted button logout" style="padding: 0">Logout</button>
+                        <button class="ui inverted circular button logout" style="padding: 0">Logout</button>
                     </div>
                 </div>
             </div>
@@ -39,14 +39,14 @@
         <div class="ui basic segment">
             <div class="ui three column grid container">
                 <div class="column" >
-                    <div class="ui segment card-view">
+                    <div class="ui basic segment card-view">
                         <div class="ui image back-cover" style="background-image: url('../images/img1.jpg')">
 
                         </div>
                         <p class="card-title">Ut unde numquam non nisi.</p>
-                        <div class="ui horizontal list" style="color: darkgray">
-                            <div class="item"><i class="unhide icon"></i>10K</div>
-                            <div class="item"><i class="checkmark icon"></i>10 people got it</div>
+                        <div class="ui horizontal list" style="color: #757575">
+                            <div class="item"><i class="unhide icon"></i><span>10K&nbsp;&nbsp;|</span></div>
+                            <div class="item"><i class="checkmark icon"></i><span>10 people got it</span></div>
                         </div>
                     </div>
                 </div>
@@ -56,9 +56,9 @@
 
                         </div>
                         <p class="card-title">Nesciunt eligendi qui et si...</p>
-                        <div class="ui horizontal list" style="color: darkgray">
-                            <div class="item"><i class="unhide icon"></i>10K</div>
-                            <div class="item"><i class="checkmark icon"></i>10 people got it</div>
+                        <div class="ui horizontal list">
+                            <div class="item"><i class="unhide icon"></i><span>10K</span></div>
+                            <div class="item"><i class="checkmark icon"></i><span>10 people got it</span></div>
                         </div>
                     </div>
                 </div>
@@ -68,9 +68,9 @@
 
                         </div>
                         <p class="card-title">Quo accusantium commdi in..</p>
-                        <div class="ui horizontal list" style="color: darkgray">
-                            <div class="item"><i class="unhide icon"></i>10K</div>
-                            <div class="item"><i class="checkmark icon"></i>10 people got it</div>
+                        <div class="ui horizontal list">
+                            <div class="item"><i class="unhide icon"></i><span>10K</span></div>
+                            <div class="item"><i class="checkmark icon"></i><span>10 people got it</span></div>
                         </div>
                     </div>
                 </div>
@@ -82,9 +82,9 @@
 
                     </div>
                     <p class="card-title">Delenti laudantium cum occ..</p>
-                    <div class="ui horizontal list" style="color: darkgray">
-                        <div class="item"><i class="unhide icon"></i>10K</div>
-                        <div class="item"><i class="checkmark icon"></i>10 people got it</div>
+                    <div class="ui horizontal list">
+                        <div class="item"><i class="unhide icon"></i><span>10K</span></div>
+                        <div class="item"><i class="checkmark icon"></i><span>10 people got it</span></div>
                     </div>
                 </div>
             </div>
@@ -106,9 +106,9 @@
 
                     </div>
                     <p class="card-title">Corporis qui odio perferend...</p>
-                    <div class="ui horizontal list" style="color: darkgray">
-                        <div class="item"><i class="unhide icon"></i>10K</div>
-                        <div class="item"><i class="checkmark icon"></i>10 people got it</div>
+                    <div class="ui horizontal list">
+                        <div class="item"><i class="unhide icon"></i><span>10K</span></div>
+                        <div class="item"><i class="checkmark icon"></i><span>10 people got it</span></div>
                     </div>
                 </div>
             </div>
@@ -120,9 +120,9 @@
 
                     </div>
                     <p class="card-title">Molestiae cupiditate et ut...</p>
-                    <div class="ui horizontal list" style="color: darkgray">
-                        <div class="item"><i class="unhide icon"></i>10K</div>
-                        <div class="item"><i class="checkmark icon"></i>10 people got it</div>
+                    <div class="ui horizontal list">
+                        <div class="item"><i class="unhide icon"></i><span>10K</span></div>
+                        <div class="item"><i class="checkmark icon"></i><span>10 people got it</span></div>
                     </div>
                 </div>
             </div>
@@ -132,9 +132,9 @@
 
                     </div>
                     <p class="card-title">Rem accusamus dicta repudia...</p>
-                    <div class="ui horizontal list" style="color: darkgray">
-                        <div class="item"><i class="unhide icon"></i>10K</div>
-                        <div class="item"><i class="checkmark icon"></i>10 people got it</div>
+                    <div class="ui horizontal list">
+                        <div class="item"><i class="unhide icon"></i><span>10K</span></div>
+                        <div class="item"><i class="checkmark icon"></i><span>10 people got it</span></div>
                     </div>
                 </div>
             </div>
@@ -144,9 +144,9 @@
 
                     </div>
                     <p class="card-title">Ad et voluptatibus qui Nih...</p>
-                    <div class="ui horizontal list" style="color: darkgray">
-                        <div class="item"><i class="unhide icon"></i>10K</div>
-                        <div class="item"><i class="checkmark icon"></i>10 people got it</div>
+                    <div class="ui horizontal list">
+                        <div class="item"><i class="unhide icon"></i><span>10K</span></div>
+                        <div class="item"><i class="checkmark icon"></i><span>10 people got it</span></div>
                     </div>
                 </div>
             </div>
