--- a/第一阶段大作业/html/index.html
+++ b/第一阶段大作业/html/index.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="../css/index.css">
     </head>
     <body style="background-color: #f5f5f5">
+
         <!--头部-->
         <div class="ui inverted basic segment">
             <div class="ui text menu header">
@@ -20,139 +21,161 @@
                         </div>
                         <span class="username">admin</span>
                     </div>
-                    <div class="item" style="padding-right: 18px">
+                    <div class="item" style="padding-right: 18px;font-size:13px">
                         <button class="ui inverted circular button logout" style="padding: 0">Logout</button>
                     </div>
                 </div>
             </div>
-
         </div>
 
+        <!-- 三个按钮  -->
         <div class="ui center aligned basic segment" style="margin-top: 46px;height: 46px;padding: 0">
-            <div class="ui three item menu center" style="width:402px;height: 46px;left: 50%;transform: translate(-50%,0);position: absolute">
+            <div class="ui borderless three item menu center" style="width:402px;height: 46px;left: 50%;transform: translate(-50%,0);position: absolute;border-width:0">
                 <div class="active item" style="color: darkgray">All</div>
                 <div class="active item" style="color: darkgray">New</div>
                 <div class="item">Editor's</div>
             </div>
         </div>
 
-        <div class="ui basic segment">
-            <div class="ui three column grid container">
+        <!-- 主体部分 -->
+        <div class="ui basic segment" style="text-align:center">
+            <div class="ui three column grid" style="width:820px;margin:0 auto">
                 <div class="column" >
                     <div class="ui basic segment card-view">
                         <div class="ui image back-cover" style="background-image: url('../images/img1.jpg')">
-
                         </div>
-                        <p class="card-title">Ut unde numquam non nisi.</p>
-                        <div class="ui horizontal list" style="color: #757575">
-                            <div class="item"><i class="unhide icon"></i><span>10K&nbsp;&nbsp;|</span></div>
-                            <div class="item"><i class="checkmark icon"></i><span>10 people got it</span></div>
+                        <div class="ui basic segment descr" style="text-align:left">
+                            <p class="card-title">Ut unde numquam non nisi.</p>
+                            <div class="ui horizontal list" style="color: #757575">
+                                <div class="item"><i class="unhide icon" ></i><span>10K&nbsp;&nbsp;|</span></div>
+                                <div class="item" style="margin:0;padding:0 0 0 4px"><i class="checkmark icon" ></i><span>10 people got it</span></div>
+                            </div>
                         </div>
                     </div>
                 </div>
                 <div class="column">
-                    <div class="ui segment card-view">
+                    <div class="ui basic segment card-view">
                         <div class="ui image back-cover" style="background-image: url('../images/img2.jpg')">
 
                         </div>
-                        <p class="card-title">Nesciunt eligendi qui et si...</p>
-                        <div class="ui horizontal list">
-                            <div class="item"><i class="unhide icon"></i><span>10K</span></div>
-                            <div class="item"><i class="checkmark icon"></i><span>10 people got it</span></div>
+                        <div class="ui basic segment descr" style="text-align:left">
+                            <p class="card-title">Nesciunt eligendi qui et si...</p>
+                            <div class="ui horizontal list" style="color: #757575">
+                                <div class="item"><i class="unhide icon" ></i><span>10K&nbsp;&nbsp;|</span></div>
+                                <div class="item" style="margin:0;padding:0 0 0 4px"><i class="checkmark icon" ></i><span>10 people got it</span></div>
+                            </div>
                         </div>
+
                     </div>
                 </div>
                 <div class="column">
-                    <div class="ui segment card-view">
+                    <div class="ui basic segment card-view">
                         <div class="ui image back-cover" style="background-image: url('../images/img3.jpg')">
 
                         </div>
-                        <p class="card-title">Quo accusantium commdi in..</p>
-                        <div class="ui horizontal list">
-                            <div class="item"><i class="unhide icon"></i><span>10K</span></div>
-                            <div class="item"><i class="checkmark icon"></i><span>10 people got it</span></div>
+                        <div class="ui basic segment descr" style="text-align:left">
+                            <p class="card-title">Quo accusantium commdi in..</p>
+                            <div class="ui horizontal list" style="color: #757575">
+                                <div class="item"><i class="unhide icon" ></i><span>10K&nbsp;&nbsp;|</span></div>
+                                <div class="item" style="margin:0;padding:0 0 0 4px"><i class="checkmark icon" ></i><span>10 people got it</span></div>
+                            </div>
                         </div>
-                    </div>
-                </div>
-            </div>
-            <div class="ui three column grid container">
-            <div class="column" >
-                <div class="ui segment card-view">
-                    <div class="ui image back-cover" style="background-image: url('../images/img4.jpg')">
 
                     </div>
-                    <p class="card-title">Delenti laudantium cum occ..</p>
-                    <div class="ui horizontal list">
-                        <div class="item"><i class="unhide icon"></i><span>10K</span></div>
-                        <div class="item"><i class="checkmark icon"></i><span>10 people got it</span></div>
-                    </div>
                 </div>
             </div>
-            <div class="column">
-                <div class="ui segment card-view">
-                    <div class="ui image back-cover" style="background-image: url('../images/img5.jpg')">
+            <div class="ui three column grid" style="width:820px;margin:0 auto">
+              <div class="column" >
+                  <div class="ui basic segment card-view">
+                      <div class="ui image back-cover" style="background-image: url('../images/img4.jpg')">
 
-                    </div>
-                    <p class="card-title">Aliquidi impedit et iure fug...</p>
-                    <div class="ui horizontal list" style="color: darkgray">
-                        <div class="item"><i class="unhide icon"></i>10K</div>
-                        <div class="item"><i class="checkmark icon"></i>10 people got it</div>
-                    </div>
-                </div>
-            </div>
-            <div class="column">
-                <div class="ui segment card-view">
-                    <div class="ui image back-cover" style="background-image: url('../images/img6.jpg')">
+                      </div>
+                      <div class="ui basic segment descr" style="text-align:left">
+                          <p class="card-title">Delenti laudantium cum occ..</p>
+                          <div class="ui horizontal list" style="color: #757575">
+                              <div class="item"><i class="unhide icon" ></i><span>10K&nbsp;&nbsp;|</span></div>
+                              <div class="item" style="margin:0;padding:0 0 0 4px"><i class="checkmark icon" ></i><span>10 people got it</span></div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <div class="column">
+                  <div class="ui basic segment card-view">
+                      <div class="ui image back-cover" style="background-image: url('../images/img5.jpg')">
 
-                    </div>
-                    <p class="card-title">Corporis qui odio perferend...</p>
-                    <div class="ui horizontal list">
-                        <div class="item"><i class="unhide icon"></i><span>10K</span></div>
-                        <div class="item"><i class="checkmark icon"></i><span>10 people got it</span></div>
-                    </div>
-                </div>
-            </div>
-            </div>
-            <div class="ui three column grid container" >
-            <div class="column" >
-                <div class="ui segment card-view">
-                    <div class="ui image back-cover" style="background-image: url('../images/img7.jpg')">
+                      </div>
+                      <div class="ui basic segment descr" style="text-align:left">
+                          <p class="card-title">Aliquidi impedit et iure fug...</p>
+                          <div class="ui horizontal list" style="color: #757575">
+                              <div class="item"><i class="unhide icon" ></i><span>10K&nbsp;&nbsp;|</span></div>
+                              <div class="item" style="margin:0;padding:0 0 0 4px"><i class="checkmark icon" ></i><span>10 people got it</span></div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <div class="column">
+                  <div class="ui basic segment card-view">
+                      <div class="ui image back-cover" style="background-image: url('../images/img6.jpg')">
 
-                    </div>
-                    <p class="card-title">Molestiae cupiditate et ut...</p>
-                    <div class="ui horizontal list">
-                        <div class="item"><i class="unhide icon"></i><span>10K</span></div>
-                        <div class="item"><i class="checkmark icon"></i><span>10 people got it</span></div>
-                    </div>
-                </div>
+                      </div>
+                      <div class="ui basic segment descr" style="text-align:left">
+                          <p class="card-title">Corporis qui odio perferend...</p>
+                          <div class="ui horizontal list" style="color: #757575">
+                              <div class="item"><i class="unhide icon" ></i><span>10K&nbsp;&nbsp;|</span></div>
+                              <div class="item" style="margin:0;padding:0 0 0 4px"><i class="checkmark icon" ></i><span>10 people got it</span></div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
             </div>
-            <div class="column">
-                <div class="ui segment card-view">
-                    <div class="ui image back-cover" style="background-image: url('../images/img8.jpg')">
+            <div class="ui three column grid" style="width:820px;margin:0 auto" >
+              <div class="column" >
+                  <div class="ui basic segment card-view">
+                      <div class="ui image back-cover" style="background-image: url('../images/img7.jpg')">
 
-                    </div>
-                    <p class="card-title">Rem accusamus dicta repudia...</p>
-                    <div class="ui horizontal list">
-                        <div class="item"><i class="unhide icon"></i><span>10K</span></div>
-                        <div class="item"><i class="checkmark icon"></i><span>10 people got it</span></div>
-                    </div>
-                </div>
-            </div>
-            <div class="column">
-                <div class="ui segment card-view">
-                    <div class="ui image back-cover" style="background-image: url('../images/img9.jpg')">
+                      </div>
+                      <div class="ui basic segment descr" style="text-align:left">
+                          <p class="card-title">Molestiae cupiditate et ut...</p>
+                          <div class="ui horizontal list" style="color: #757575">
+                              <div class="item"><i class="unhide icon" ></i><span>10K&nbsp;&nbsp;|</span></div>
+                              <div class="item" style="margin:0;padding:0 0 0 4px"><i class="checkmark icon" ></i><span>10 people got it</span></div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <div class="column">
+                  <div class="ui basic segment card-view">
+                      <div class="ui image back-cover" style="background-image: url('../images/img8.jpg')">
 
-                    </div>
-                    <p class="card-title">Ad et voluptatibus qui Nih...</p>
-                    <div class="ui horizontal list">
-                        <div class="item"><i class="unhide icon"></i><span>10K</span></div>
-                        <div class="item"><i class="checkmark icon"></i><span>10 people got it</span></div>
-                    </div>
-                </div>
-            </div>
+                      </div>
+                      <div class="ui basic segment descr" style="text-align:left">
+                          <p class="card-title">Rem accusamus dicta repudia...</p>
+                          <div class="ui horizontal list" style="color: #757575">
+                              <div class="item"><i class="unhide icon" ></i><span>10K&nbsp;&nbsp;|</span></div>
+                              <div class="item" style="margin:0;padding:0 0 0 4px"><i class="checkmark icon" ></i><span>10 people got it</span></div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
+              <div class="column">
+                  <div class="ui basic segment card-view">
+                      <div class="ui image back-cover" style="background-image: url('../images/img9.jpg')">
+
+                      </div>
+                      <div class="ui basic segment descr" style="text-align:left">
+                          <p class="card-title">Ad et voluptatibus qui Nih...</p>
+                          <div class="ui horizontal list" style="color: #757575">
+                              <div class="item"><i class="unhide icon" ></i><span>10K&nbsp;&nbsp;|</span></div>
+                              <div class="item" style="margin:0;padding:0 0 0 4px"><i class="checkmark icon" ></i><span>10 people got it</span></div>
+                          </div>
+                      </div>
+                  </div>
+              </div>
             </div>
         </div>
-        <div class="ui basic segment" style="margin:60px 0 40px 0;padding: 0;height: 40px">
+
+        <!-- 底部按钮 -->
+        <div class="ui basic segment" style="margin:60px 0 40px 0;padding: 0;height: 40px;text-align:center">
             <div class="ui mini two item menu bottom" style="width:120px;height: 40px;left: 50%;transform: translate(-50%,0);position: absolute">
                 <a class="item"><i class="red arrow left icon" style="width: 50px"></i></a>
                 <a class="item"><i class="red arrow right icon"></i></a>
